Fixed alignment for main icon

--- a/src/App.css
+++ b/src/App.css
@@ -202,4 +202,8 @@ a {
   .result-item {
     width: 95vw;
   }
+
+  .header-icon {
+    display: none;
+  }
 }
